Add Subject logic on all layers

--- a/ClientSide/src/assets/i18n/en-GB.json
+++ b/ClientSide/src/assets/i18n/en-GB.json
@@ -29,5 +29,11 @@
         "STUDY_PROGRAMMES": "Study programmes",
         "CODE": "Code",
         "TITLE": "Title"
+    },
+    "SUBJECT": {
+        "NEW_SUBJECT": "New subject",
+        "CODE": "Code",
+        "TITLE": "Title",
+        "SHORT_TITLE": "Short title"
     }
 }
