--- a/ClientSide/src/assets/i18n/en-GB.json
+++ b/ClientSide/src/assets/i18n/en-GB.json
@@ -11,6 +11,12 @@
         "SUCESSFULLY_SAVED": "Successfully saved",
         "PLEASE_FILL_ALL_FIELDS": "Please, fill all required fields!"
     },
+    "AUTHORIZATION": {
+        "LOGIN": "Login",
+        "PASSWORD": "Password",
+        "LOG_IN": "Log in",
+        "UNATHORIZED": "Unathorized"
+    },
     "HOME": {
         "HELLO_MESSAGE": "Welcome to System for student's attendance monitoring"
     },
