--- a/ClientSide/src/assets/i18n/ru-RU.json
+++ b/ClientSide/src/assets/i18n/ru-RU.json
@@ -1,11 +1,41 @@
 {
+    "COMMON": {
+        "ADD": "Добавить",
+        "ACTIONS": "Действия",
+        "EDIT": "Редаектировать",
+        "FILTER": "Фильтр",
+        "SAVE": "Сохранить",
+        "DELETE": "Удалить",
+        "BACK": "Назад",
+        "CLOSE": "Закрыть",
+        "CANCEL": "Отменить",
+        "YES": "Да",
+        "NO": "Нет",
+        "SUCESSFULLY_SAVED": "Успешно сохранено",
+        "PLEASE_FILL_ALL_FIELDS": "Пожалуйста, заполните все поля!",
+        "ARE_YOU_SURE": "Вы уверены?"
+    },
+    "AUTHORIZATION": {
+        "LOGIN": "Имя пользователя",
+        "PASSWORD": "Пароль",
+        "LOG_IN": "Войти",
+        "UNAUTHORIZED": "Вы не авторизованы, или у Вас нет прав на это действие"
+    },
     "HOME": {
-        "HELLO_MESSAGE": "Добро пожаловать в Систему мониторинга посещаемости студентов"
+        "HELLO_MESSAGE": "Добро пожаловать в Систему мониторинга посещаемости студентов",
+        "CURRENT_TIME": "Текущее время",
+        "CURRENT_ONLINE": "Количество пользователей online",
+        "VISITED": "Посещено (проценты)",
+        "NOT_VISITED": "Не посещено (проценты)"
     },
     "HEADERS": {
         "HOME": "Домашняя страница",
         "FACULTIES": "Факультеты",
         "SUBJECTS": "Предметы",
-        "STUDENTS": "Студенты"
+        "STUDENTS": "Студенты",
+        "CONFIGURATION": "Конфигурация",
+        "SEE_OWN_ATTENDANCE": "Посмотреть свою посещаемость",
+        "NOTIFICATIONS": "Нотификации",
+        "NOTIFICATION_HISTORY": "История нотификаций"
     }
 }
